--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="utf-8">
   <title>ExperimentSubjectChangeDetection</title>
-  <base href="/">
+  <base href="https://galczo5.github.io/experiment-subject-change-detection/">
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="favicon.ico" rel="icon" type="image/x-icon">
 <link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
